==> ConstStrings/NFC-Database/1.FirmWare/2.mbed/RC522/rc522.cpp <==
#include "rc522.h"
#include "stdio.h"
#include <string.h>
#define TARGET_TX_PIN                                                     USBTX
#define TARGET_RX_PIN                                                     USBRX

void RC522_Init(void)
{
	RC522_SPI_GPIO_Init();//初始化RC522的复位引脚和片选引脚
 
	//SPI1_Init();//初始化SPI	
 
    ThisThread::sleep_for(50ms);
	PcdReset();//复位RC522读卡器
 
	ThisThread::sleep_for(10ms);
	PcdAntennaOff();//关闭天线发射
	
	ThisThread::sleep_for(10ms);
    PcdAntennaOn();//开启天线发射
    #if USB_DEBUG
	    printf("RFID-MFRC522 Init Success!\nPress KEY0 Or KEY1 To Start...\r\n");  //初始化完成
    #endif
}

char PcdReset(void)
{
	RC522_Reset_Disable();
    ThisThread::sleep_for(10ms);
    RC522_Reset_Enable();
    ThisThread::sleep_for(60ms);
    RC522_Reset_Disable();
    ThisThread::sleep_for(500ms);
    WriteRawRC(CommandReg, PCD_RESETPHASE);//复位指令
    ThisThread::sleep_for(2ms);
 
    WriteRawRC(ModeReg, 0x3D);//定义发送和接收常用模式,和Mifare卡通讯，CRC初始值0x6363
    WriteRawRC(TReloadRegL, 30);//16位定时器低位
    WriteRawRC(TReloadRegH, 0);//16位定时器高位
    WriteRawRC(TModeReg, 0x8D);//定义内部定时器的设置
    WriteRawRC(TPrescalerReg, 0x3E);//设置定时器分频系数
    WriteRawRC(TxAutoReg, 0x40);//调制发送信号为100%ASK
 
    ClearBitMask(TestPinEnReg, 0x80);
    WriteRawRC(TxAutoReg, 0x40);
 
    return MI_OK;
}

uint8_t ReadRawRC(uint8_t Address)
{
    uint8_t ucAddr;
    uint8_t ucResult = 0;
    ucAddr = ((Address << 1) & 0x7E) | 0x80;//最高位置1，读操作;最低为默认0
    ThisThread::sleep_for(1ms);
    RC522_CS_Enable();
    //SPI_WriteNBytes(SPI1_SPI, &ucAddr, 1);  //向总线写多个数据
    //SPI_ReadNBytes(SPI1_SPI, &ucResult, 1); //向总线读多个数据
    //ucResult = spi.write(ucAddr);
    spi.write(ucAddr);
    ucResult = spi.write(0);
    RC522_CS_Disable();
    //printf("UC:%d\n",ucResult);
    return ucResult;
}

void WriteRawRC(uint8_t Address, uint8_t value)
{
    uint8_t ucAddr;
    char write_buffer[2] = {0};
    //char read_buffer[2] = {0};
    ucAddr = ((Address << 1) & 0x7E);//最高位置0，写操作;最低为默认0
    write_buffer[0] = ucAddr;
    write_buffer[1] = value;
    ThisThread::sleep_for(1ms);
    RC522_CS_Enable();
    //SPI_WriteNBytes(SPI1_SPI, write_buffer, 2);
    //spi.write(write_buffer, 2,read_buffer, 2);
    spi.write(ucAddr);
    spi.write(value);
    RC522_CS_Disable();
}
