==> ariyflow/rfid-item/sensor-layer/rc522.c <==
#include <intrins.h>
#include "regdef.h"
#include "rc522.h"
#define MAXRLEN 18

void rc522Init(){
		EA = 0;
    // 1. 配置 P4 口为推挽输出 (驱动反向器)
    P4M1 &= 0xE1;   // 1110 0001
    P4M0 |= 0x1E;   // 0001 1110 (P4.1-P4.4 推挽)
    
    // 2. 配置 P1.0 为高阻输入 (MISO)
    P1M1 |= 0x01;
    P1M0 &= 0xFE;
    
    // 3. 配置 P1.1 为推挽输出 (NSS)
    P1M1 &= 0xFD;
    P1M0 |= 0x02;
    
    // 4. 初始电平状态
    MF522_NSS = 1;      // 未选中
    MF522_SCK = 1;      // 空闲 (物理低)
    MF522_SI  = 1;      // 空闲 (物理低)
    
    // 5. 设置 RC522 通信模式 (SPI)
    // 指导书：EA=1, IIC=0 表示 SPI (因有反向器，MCU 输出相反)
    MF522_EA  = 0;      // 物理 1
    MF522_IIC = 1;      // 物理 0 (SPI 模式)
    
    // 6. 软复位
    // WriteRawRC(CommandReg, 0x0F); // SoftReset

	PcdReset();
	PcdAntennaOff();
	PcdAntennaOn();
	EA = 1;
}

char PcdReset(void)
{
    //MF522_RST=1;
  //  _nop_();
  //  MF522_RST=0;
  //  _nop_();
//    MF522_RST=1;
 //    _nop_();
    WriteRawRC(CommandReg,PCD_RESETPHASE);
    _nop_();
    
    WriteRawRC(ModeReg,0x3D);            //和Mifare卡通讯，CRC初始值0x6363
    WriteRawRC(TReloadRegL,30);           
    WriteRawRC(TReloadRegH,0);
    WriteRawRC(TModeReg,0x8D);
    WriteRawRC(TPrescalerReg,0x3E);
    WriteRawRC(TxAskReg,0x40);
   
    return MI_OK;
}

unsigned char ReadRawRC(unsigned char Address)
{
    xdata unsigned char i, ucAddr;
    xdata unsigned char ucResult = 0;
	
	// EA = 0; // 关闭中断
    
    MF522_SCK = 1;        // 空闲状态
    MF522_NSS = 0;        // 片选有效
    
    // 地址格式：[6 位地址][1 位 1(读)][1 位 0]
    ucAddr = ((Address << 1) & 0x7E) | 0x80;
    
    // 发送地址
    for(i = 8; i > 0; i--) {
        MF522_SI = !((ucAddr & 0x80) == 0x80); // 取反
        MF522_SCK = 0;
        ucAddr <<= 1;
        MF522_SCK = 1;
    }
    
    // 接收数据
    for(i = 8; i > 0; i--) {
        MF522_SCK = 0;    // 产生时钟
        ucResult <<= 1;
        
        // 【关键】MISO 直连，直接读取，不用取反
        if(MF522_SO) {
            ucResult |= 0x01;
        }
        
        MF522_SCK = 1;    // 恢复空闲
    }
    
    MF522_NSS = 1;
    MF522_SCK = 1;
		
	// EA = 1; // 恢复中断
    
    return ucResult;
     
}

void WriteRawRC(unsigned char Address, unsigned char value)
{  
    xdata unsigned char i, ucAddr;
	
	// EA = 0;
    
    MF522_SCK = 1;        // 空闲状态 (物理低)
    MF522_NSS = 0;        // 片选有效
    
    // 地址格式：[6 位地址][1 位 0(写)][1 位 0]
    ucAddr = ((Address << 1) & 0x7E);
    
    // 发送地址
    for(i = 8; i > 0; i--) {
        // 【关键】MOSI 经过反向器，需要取反输出
        MF522_SI = !((ucAddr & 0x80) == 0x80);
        
        
        MF522_SCK = 0;    // 产生上升沿 (物理)，RC522 采样
        ucAddr <<= 1;
        MF522_SCK = 1;    // 恢复空闲
    }
    
    // 发送数据
    for(i = 8; i > 0; i--) {
        // 【关键】MOSI 经过反向器，需要取反输出
        MF522_SI = !((value & 0x80) == 0x80);
        
        MF522_SCK = 0;
        value <<= 1;
        MF522_SCK = 1;
    }
    
    MF522_NSS = 1;        // 取消片选
    MF522_SCK = 1;        // 恢复空闲
		
	// EA = 1;
}
